Add image folder

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         and guidance.</p>
                 </div>
                 <div class="slide-image">
-                    <img src="./right-bg-one.png" alt="">
+                    <img src="./images/right-bg-one.png" alt="">
                 </div>
             </div>
         </div>
@@ -35,7 +35,7 @@
                         and guidance.</p>
                 </div>
                 <div class="slide-image">
-                    <img src="./right-bg-one.png" alt="">
+                    <img src="./images/right-bg-one.png" alt="">
                 </div>
             </div>
         </div>
@@ -50,7 +50,7 @@
                         and guidance.</p>
                 </div>
                 <div class="slide-image">
-                    <img src="./right-bg-one.png" alt="">
+                    <img src="./images/right-bg-one.png" alt="">
                 </div>
             </div>
         </div>
@@ -65,7 +65,7 @@
                         and guidance.</p>
                 </div>
                 <div class="slide-image">
-                    <img src="./right-bg-one.png" alt="">
+                    <img src="./images/right-bg-one.png" alt="">
                 </div>
             </div>
         </div>
@@ -80,7 +80,7 @@
                         and guidance.</p>
                 </div>
                 <div class="slide-image">
-                    <img src="./right-bg-one.png" alt="">
+                    <img src="./images/right-bg-one.png" alt="">
                 </div>
             </div>
         </div>
@@ -95,7 +95,7 @@
                         and guidance.</p>
                 </div>
                 <div class="slide-image">
-                    <img src="./right-bg-one.png" alt="">
+                    <img src="./images/right-bg-one.png" alt="">
                 </div>
             </div>
         </div>
@@ -110,7 +110,7 @@
                         and guidance.</p>
                 </div>
                 <div class="slide-image">
-                    <img src="./right-bg-one.png" alt="">
+                    <img src="./images/right-bg-one.png" alt="">
                 </div>
             </div>
         </div>      
@@ -133,8 +133,8 @@
             <div class="circyle-box-dot"></div>
         </div>
 
-        <span class="arrow prev" id="prevArrow"><img src="./previous-arrow.png" alt="Previous Arrow"></span>
-        <span class="arrow next" id="nextArrow"><img src="./next-arrow.png" alt="Next Arrow"></span>
+        <span class="arrow prev" id="prevArrow"><img src="./images/previous-arrow.png" alt="Previous Arrow"></span>
+        <span class="arrow next" id="nextArrow"><img src="./images/next-arrow.png" alt="Next Arrow"></span>
     </div>  
     <script src="./script.js"></script>  
 </body>
