Add image folder

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>      
 
         <div class="botttom-fix-image">
-            <img src="./half-circyle.png" alt="">
+            <img src="./images/half-circyle.png" alt="">
         </div>
 
         <div class="rotate-section" id="rotateSection">
